Fix: Carousal arrow's z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+.react-multiple-carousel__arrow {
+    z-index: 5 !important;
+}
